--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
         "@google/generative-ai": "^0.2.1",
         "@huggingface/inference": "^2.8.1",
         "@mistralai/mistralai": "^1.1.0",
+        "axios": "^1.8.4",
         "canvas": "^3.1.0",
         "cheerio": "^1.0.0",
+        "elevenlabs": "^1.56.1",
         "express": "^4.18.2",
         "google-translate-api-x": "^10.7.1",
         "groq-sdk": "^0.15.0",
@@ -20,12 +22,14 @@
         "node-canvas-webgl": "PrismarineJS/node-canvas-webgl",
         "openai": "^4.4.0",
         "patch-package": "^8.0.0",
+        "play-sound": "^1.1.6",
         "prismarine-item": "^1.15.0",
         "prismarine-viewer": "^1.32.0",
         "replicate": "^0.29.4",
         "ses": "^1.9.1",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
+        "sound-play": "^1.1.0",
         "three": "^0.128.0",
         "vec3": "^0.1.10",
         "yargs": "^17.7.2"
